use the exact same queries which have been used for the clinical data counts endpoint